--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panda Flocus | Ellie Gons</title>
+    <link rel="icon" href="./icon/favicon.ico" type="ico" sizes="32x32">
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
