--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panda Flocus | Ellie Gons</title>
+    <title>Pandadoro | Ellie Gons</title>
     <link rel="icon" href="./icon/favicon.ico" type="ico" sizes="32x32">
     <!-- Font Awesome Icons -->
     <link
